--- a/style.css
+++ b/style.css
@@ -25,6 +25,20 @@
     padding-top: 100px;
     padding-bottom: 100px;
 }
-.footer {
-font:green;
+.card-body {
+    text-align: center;
 }
+
+.carousel {
+    background-color: rgba(255, 250, 240, 0.562);
+    text-align: center;
+}
+
+#free-shipping {
+    text-align: center;
+}
+
+.footer {
+    color:green;
+}
+
